# dev

./: .gitignore  CMakeLists.txt  README.md  centos_publish_dist.sh  classheader.txt  fileheader.txt  functionheader.txt  m_d.sh  make_dbg_dist.sh  make_dist.sh  make_dist_ninja.sh  make_full_dbg_dist.sh  make_full_dist.sh  uncrustify.cfg
containers/: CCfgItem.cpp  CCfgItem.h  CConfigurationCtrl.cpp  CConfigurationCtrl.h  CFilter.cpp  CFilter.h  CLogScrutinizerDoc.cpp  CLogScrutinizerDoc.h  CMakeLists.txt  CMemPool.cpp  CMemPool.h  CRecentFile.cpp  CRecentFile.h  CRowCache.cpp  CRowCache.h  CWorkspace.cpp  CWorkspace.h  CWorkspace_cb_if.h
crash/: CMakeLists.txt  crash_handler_linux.cpp  crash_handler_linux.h  crash_handler_win.cpp  crash_handler_win.h
packaging/: README.txt  copyright.txt  download_install.sh  download_install_LS_for_ubuntu16.sh  download_install_LS_for_ubuntu17.sh  generate_additional_packaging_files_linux.py  generate_additional_packaging_files_win32.py  generate_download_install_script.py  generate_product_config.py
plugins/plugin_dev/: CMakeLists.txt  plugins.cmake  readme.txt
plugins/plugin_dev/file_streamer/: CMakeLists.txt  file_streamer.cpp
plugins/plugin_dev/plugin_example_1/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_2/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_3/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_3_1/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_4/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_5/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_6/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_example_7/: CMakeLists.txt  dll_plugin.cpp  dll_plugin.h  test_data.txt
plugins/plugin_dev/plugin_framework/: CMakeLists.txt  plugin_api.cpp  plugin_api.h  plugin_base.cpp  plugin_base.h  plugin_base_internal.cpp  plugin_base_internal.h  plugin_constants.h  plugin_constants_internal.h  plugin_main.cpp  plugin_text_parser.cpp  plugin_text_parser.h  plugin_utils.cpp  plugin_utils.h  plugin_utils_internal.cpp  plugin_utils_internal.h
plugins/plugin_dev/plugin_tester/: CMakeLists.txt  plugin_tester.cpp
processing/: CFileCtrl.cpp  CFileCtrl.h  CFileProcBase.cpp  CFileProcBase.h  CFilterProcCtrl.cpp  CFilterProcCtrl.h  CMakeLists.txt  CProgressCtrl.cpp  CProgressCtrl.h  CProgressDlg.cpp  CProgressDlg.h  CSearchCtrl.cpp  CSearchCtrl.h  CThread.cpp  CThread.h
qt/: CMakeLists.txt  CPlotCtrl.cpp  cceditorwidget.ui  ceditorwidget.cpp  ceditorwidget.h  ceditorwidget_cb_if.h  ceditorwidget_ext.cpp  cfilteritemwidget.cpp  cfilteritemwidget.h  cplotctrl.h  cplotpane.cpp  cplotpane.h  cplotpane_cb_if.h  cplotwidget.cpp  cplotwidget.h  cplotwidget_graphics.cpp  cplotwidget_graphics.h  cplotwidget_if.h  csearchwidget.cpp  csearchwidget.h  csubplotsurface.cpp  csubplotsurface.h  csubplotsurface_unixtime.cpp  cworkspaceTreeView.cpp  cworkspaceTreeView.h  cworkspacewidget.ui  filteritemeditor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_cb_if.h  resources.qrc  searchform.ui  stylesheet.qss  win.rc
settings/: CConfig.cpp  CConfig.h  CMakeLists.txt  globals.cpp  globals.h
testing/: CMakeLists.txt  CParseTesting.cpp  CParseTesting.h  Testing.cpp
utils/: CDebug.cpp  CDebug.h  CFontCtrl.cpp  CFontCtrl.h  CMakeLists.txt  CSelection.h  CTimeMeas.cpp  CTimeMeas.h  CXMLBase.cpp  CXMLBase.h  TextDecoration.cpp  TextDecoration.h  filemapping.cpp  filemapping.h  quickFix.h  utils.cpp  utils.h
